--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,13 @@ ul{
 }
 
 body {
-    background-image: url(./assets/bg.jpg);
+    background-image: url(./assets/bg.png);
     background-position: top center;
     background-size: 100% auto;
     background-repeat: no-repeat;
     background-color: #121214;
 }
+
 
 body * {
     font-family: 'Inter', sans-serif;
@@ -30,7 +31,8 @@ header {
 header div {
     width: 120px;
     margin: auto;
-    background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
+    /* background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%); */
+    background-image: linear-gradient(90deg, #C91842 0%, #5CC2E2 100%);
     border-radius: 50%;
     display: flex;
     padding: 4px;
@@ -59,13 +61,14 @@ main{
 
 section {
     color: white;
-    background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
+    /* background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%); */
+    background-image: linear-gradient(90deg, #C91842 0%, #5CC2E2 100%);
     padding-top: 4px;
     border-radius: 10px;
 }
 
 section div{
-    background-color: #2a2634;
+    background-color: #262629;
     padding: 32px;
     padding-top: 24px;
     border-radius: 8px;
@@ -98,9 +101,11 @@ section ul li:hover{
 }
 
 .games-list img {
-    width: 90px;
+    width: 95px;
+    height: 125px;
     border-radius: 8px;
-
+    max-width: 100%;
+    object-fit: cover;
 }
 
 .channel-list img{
